cabal-version:      2.4
name:               cedar
version:            0.1.0.0
synopsis:           Haskell Lisp interpreter

description:        Simple CommonLisp interpreter written in Haskell using Parsec, for fun.
homepage:           https://github.com/lukewhrit/cedar

bug-reports:        https://github.com/lukewhrit/cedar/issues
license:            LGPL-3.0-or-later
license-file:       LICENSE
author:             Luke Whritenour
maintainer:         lukewhrit@proton.me

copyright:          (c) 2022 Luke Whritenour
category:           Language
extra-source-files: CHANGELOG.md

executable cedar
    main-is:          Main.hs

    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
